[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redstat"
authors = [{ name = "temkuz", email = "temkuz@yandex.ru" }]
version = "2.1.0"
description = "Cli tools for parse statistic from reddit"
dependencies = [
    "aiohttp==3.9.3"
]

readme = "README.md"

requires-python = ">=3.11"
keywords = ["cli", "reddit", "parser", "statistic"]


[project.scripts]
redload = "redstat.redload.__init__:main"